basic editor functionality, saving, multiple buffers, line numbers

--- a/README.org
+++ b/README.org
@@ -1,3 +1,17 @@
 #+title: iota
 
 ~iota~ is the working name of a new text editor. Born out of the desire to bring what's useful about Emacs into the 21st century.
+
+~iota~'s overall goals include:
+- async first, unlike Emacs
+- truly parallel
+- fully configurable with Lua and as customizable as Emacs
+- buffer-based editing, where buffers have self-contained settings
+- controlling buffer behavior with a series of modes
+- support for emacs-like keychording
+- workspaces, which contain buffers and cross-buffer settings
+- native tree-sitter support and tree-sitter based editing
+- native LSP support
+- client/server separation. I plan to build and support several first-class implementations but it should be designed such that a user could build their own front-end implementation
+- eventually, collaborative editing
+- a first-class native magit-like framework
